<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:orderInCategory="@android:integer/config_mediumAnimTime">
        <item
            android:id="@+id/nav1"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_1"/>
        <item
            android:id="@+id/nav2"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_2"/>
        <item
            android:id="@+id/nav3"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_3"/>
        <item
            android:id="@+id/nav4"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_4"/>
    </group>
</menu>